[package]
name = "wide-block-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
num_cpus = "1.16.0"
rayon = "1.8.0"
ring = "0.17.2"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "ring_aes_gcm"
harness = false
